[package]
name = "pinocchio-raydium-locking-program"
description = "Pinocchio helpers to invoke Raydium Locking IXs"
version = "0.1.0"
edition = "2021"
authors = ["belivenn"]
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/belivenn/pinocchio-raydium-locking-cpi"
homepage = "https://github.com/belivenn/pinocchio-raydium-locking-cpi"
keywords = ["solana", "raydium", "locking", "pinocchio", "cpi"]

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = "0.8.4"
pinocchio-system = "0.2.3"
pinocchio-pubkey = "0.2.4"

